--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,21 @@
-loguru
-mkdocs
-pip
-pytest
-python-dotenv
-ruff
-tqdm
-typer
--e .
+fastapi==0.112.0
+ipykernel==6.29.5
+joblib==1.5.0
+jupyter==1.1.1
+loguru==0.7.3
+matplotlib==3.10.3
+mkdocs==1.6.1
+notebook==7.4.2
+numpy==2.2.5
+pandas==2.2.3
+pip==25.1.1
+pydantic==2.11.4
+pytest==8.3.5
+pytest==8.3.5
+python-dotenv==1.1.0
+ruff==0.11.9
+scikit-learn==1.6.1
+seaborn==0.13.2
+tqdm==4.67.1
+typer==0.15.4
+uvicorn[standard]==0.34.2
