--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,4 +22,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/12-factor-app:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/12_factor_app:latest
